--- a/doc/AnalisiRequisiti/AnalisiDeiRequisiti.tex
+++ b/doc/AnalisiRequisiti/AnalisiDeiRequisiti.tex
@@ -203,6 +203,30 @@ Come previsto dalle norme interne di WebShape, tutti i documenti fanno riferimen
 \sezione{Casi d'uso}
 Vengono riportati di seguito i casi d'uso, sia grafici che narrativi, utilizzati durante l'analisi dei requisiti effettuata da WebShape. Lo scopo dei casi d'uso \`e quello di permettere una chiara e semplice comprensione dei bisogni del cliente percepiti dall'azienda. Per una lista esaustiva dei requisiti individuati si rimanda comunque alla lista dei requisiti di sezione \ref{listarequisiti}, cui faranno riferimento anche gli stessi casi d'uso narrativi.
 
+\subsezione{Avvio}
+Il seguente grafico descrive come ci si attende l'utente avvii l'applicazione.
+\begin{figure}
+\centering
+%\includegraphics{}
+\caption{avvio dell'applicazione}
+\end{figure}
+
+Segue ora una descrizione testuale del caso d'uso presentato dal grafico.
+
+\subsubsezione{Caso d'uso: richiedi pagina web}
+\paragraph{Attori coinvolti} Utente, browser, server HTTP
+\paragraph{Scopo e descrizione sintetica}
+L'utente avvia l'applicazione visualizzandone la relativa pagina web attraverso il browser, che richiede la relativa pagina al server HTTP.
+\paragraph{Flusso di eventi}
+\begin{enumerate}
+\item L'utente inserisce l'URL relativo all'applicazione nel browser.
+\item Il browser richiede la pagina al server HTTP
+\item Il server HTTP invia la pagina.
+\item Il browser visualizza la pagina.
+\end{enumerate}
+\paragraph{Precondizioni} Il browser \'e avviato.
+\paragraph{Postcondizioni} L'applicazione \'e avviata.
+
 \subsezione{Interazione con l'applicazione}
 Il seguente grafico descrive le interazioni tra l'utente finale e l'applicazione da un punto di vista ad alto livello. Le interazioni principali verranno poi espanse.
 \begin{figure}[!ht]
