AR: numerati casi d'uso

--- a/doc/AnalisiRequisiti/AnalisiDeiRequisiti.tex
+++ b/doc/AnalisiRequisiti/AnalisiDeiRequisiti.tex
@@ -213,7 +213,7 @@ Il seguente grafico descrive come ci si attende l'utente avvii l'applicazione.
 
 Segue ora una descrizione testuale del caso d'uso presentato dal grafico.
 
-\subsubsezione{Caso d'uso: richiedi pagina web}
+\subsubsezione{Caso d'uso 1: richiedi pagina web}
 \paragraph{Attori coinvolti} Utente, browser, server HTTP
 \paragraph{Scopo e descrizione sintetica}
 L'utente avvia l'applicazione visualizzandone la relativa pagina web attraverso il browser, che richiede la relativa pagina al server HTTP.
@@ -238,7 +238,7 @@ Il seguente grafico descrive le interazioni tra l'utente finale e l'applicazione
 
 Segue ora una descrizione testuale dei casi d'uso presentati dal grafico.
 
-\subsubsezione{Caso d'uso: pulisci \underline{canvas}}
+\subsubsezione{Caso d'uso 2: pulisci \underline{canvas}}
 \paragraph{Attori coinvolti} Utente
 \paragraph{Scopo e descrizione sintetica}
 L'utente pu\`o cancellare totalmente quanto finora disegnato.
@@ -250,7 +250,7 @@ L'utente pu\`o cancellare totalmente quanto finora disegnato.
 \paragraph{Precondizioni} Il canvas \'e visibile.
 \paragraph{Postcondizioni} Il canvas \'e vuoto.
 
-\subsubsezione{Caso d'uso: visualizza manuale}
+\subsubsezione{Caso d'uso 3: visualizza manuale}
 \paragraph{Attori coinvolti} Utente
 \paragraph{Scopo e descrizione sintetica}
 L'utente pu\`o visualizzare il manuale dell'applicazione in linea.
@@ -262,7 +262,7 @@ L'utente pu\`o visualizzare il manuale dell'applicazione in linea.
 \paragraph{Precondizioni}
 \paragraph{Postcondizioni} Il manuale utente \'e visualizzato
 
-\subsubsezione{Caso d'uso: richiedi manuale}
+\subsubsezione{Caso d'uso 4: richiedi manuale}
 \paragraph{Attori coinvolti} Server HTTP
 \paragraph{Scopo e descrizione sintetica}
 La/le pagina/e web contenenti il manuale utente sono gestite dal server HTTP.
@@ -274,7 +274,7 @@ La/le pagina/e web contenenti il manuale utente sono gestite dal server HTTP.
 \paragraph{Precondizioni} L'utente ha richiesto al sistema la visualizzazione del manuale o di parte di esso.
 \paragraph{Postcondizioni} Il sistema dispone della pagina web richiesta.
 
-\subsubsezione{Caso d'uso: sposta visualizzazione}
+\subsubsezione{Caso d'uso 5: sposta visualizzazione}
 \paragraph{Attori coinvolti} Utente
 \paragraph{Scopo e descrizione sintetica}
 Quando il canvas \'e troppo grande per essere completamente visualizzato, l'utente pu\`o spostare la visualizzazione per vedere le diverse parti del canvas.
@@ -286,7 +286,7 @@ Quando il canvas \'e troppo grande per essere completamente visualizzato, l'uten
 \paragraph{Precondizioni} Il canvas non \'e completamente visualizzato a schermo.
 \paragraph{Postcondizioni} L'utente vede su schermo la parte di canvas desiderata.
 
-\subsubsezione{Caso d'uso: aumenta zoom}
+\subsubsezione{Caso d'uso 6: aumenta zoom}
 \paragraph{Attori coinvolti} Utente
 \paragraph{Scopo e descrizione sintetica} 
 Il sistema permette all'utente di ingrandire il canvas ed il suo contenuto mantendendo le proporzioni.
@@ -300,7 +300,7 @@ Il sistema permette all'utente di ingrandire il canvas ed il suo contenuto mante
 \paragraph{Precondizioni} Il canvas \'e visualizzato
 \paragraph{Postcondizioni} Il canvas \'e ingrandito
 
-\subsubsezione{Caso d'uso: diminuisci zoom}
+\subsubsezione{Caso d'uso 7: diminuisci zoom}
 \paragraph{Attori coinvolti} Utente
 \paragraph{Scopo e descrizione sintetica} 
 Il sistema permette all'utente di rimpicciolire il canvas ed il suo contenuto mantendendo le proporzioni.
@@ -314,7 +314,7 @@ Il sistema permette all'utente di rimpicciolire il canvas ed il suo contenuto ma
 \paragraph{Precondizioni} Il canvas \'e visualizzato
 \paragraph{Postcondizioni} Il canvas \'e rimpicciolito
 
-\subsubsezione{Caso d'uso: esporta in SVG}
+\subsubsezione{Caso d'uso 8: esporta in SVG}
 \paragraph{Attori coinvolti} Utente
 \paragraph{Scopo e descrizione sintetica} 
 Il sistema permette all'utente di esportare in formato SVG il contenuto del canvas.
@@ -327,10 +327,10 @@ Il sistema permette all'utente di esportare in formato SVG il contenuto del canv
 \paragraph{Precondizioni} Il canvas \'e visualizzato
 \paragraph{Postcondizioni} Il file SVG \'e disponibile all'utente e contiene quanto visualizzato nel canvas.
 
-\subsubsezione{Caso d'uso: disegna}
+\subsubsezione{Caso d'uso 9: disegna}
 Si rimanda a \ref{ucdisegna} per una descrizione approfondita.
 
-\subsubsezione{Caso d'uso: seleziona e modifica}
+\subsubsezione{Caso d'uso 10: seleziona e modifica}
 Si rimanda a \ref{ucselezionaemodifica} per una descrizione approfondita.
 
 %inizio requisiti
