AR: modificato requisito relativo a salvataggio in SVG

--- a/doc/AnalisiRequisiti/AnalisiDeiRequisiti.tex
+++ b/doc/AnalisiRequisiti/AnalisiDeiRequisiti.tex
@@ -353,7 +353,7 @@ per ogni tipologia \`e presente un'ulteriore classificazione per classe di spazi
 \item{AJAXDRAW permette il ridimensionamento degli oggetti disegnati.}
 \item{AJAXDRAW permette all'utente di selezionare ognuna delle funzionalit\`a suddette tramite una comoda barra degli strumenti.}
 \item{Qualora suddette funzioni siano regolate da parametri, AJAXDRAW permette all'utente di impostarli.}
-\item{AJAXDRAW \`e in grado di leggere e salvare le configurazioni create dell'utente nel formato SVG.}
+\item{AJAXDRAW \`e in grado di salvare le immagini create dall'utente nel formato SVG.}
 \end{elenconumerato}
 
 %requisiti desiderabili
