Prima stesura norme di progetto

--- a/doc/NormeDiProgetto/NormeDiProgetto.tex
+++ b/doc/NormeDiProgetto/NormeDiProgetto.tex
@@ -132,6 +132,8 @@ Questo documento definisce le linee guida da seguire per la stesura della docume
 		\item[-] Ogni parola deve iniziare con una lettera in maiuscolo (ad esempio NormeDiProgetto).
 		\item[-] I documenti interni non prevedono riferimenti alla versione, che sar\`a invece presente nei documenti formali esterni.
 	\end{elencopuntato}
+	
+\sezione{Modifiche}
 	Le modifica pu\`o essere effettuata solamente dai redattori del documento, che avranno anche l'obbligo di aggiornare la tabella delle modifiche. Ogni voce di questa tabella deve comprendere il numero di versione, la data, un breve commento che indichi i principali cambiamenti e l'autore della modifica.
 	Gli approvatori possono segnalare gli eventuali cambiamenti da apportare al documento tramite i sistemi di comunicazione interni all'azienda.
 	
