--- a/doc/AnalisiRequisiti/AnalisiDeiRequisiti.tex
+++ b/doc/AnalisiRequisiti/AnalisiDeiRequisiti.tex
@@ -369,32 +369,29 @@ per ogni tipologia \`e presente un'ulteriore classificazione per classe di spazi
 %facoltativi
 \subsubsezione{Facoltativi (RFF)}
 \begin{elenconumerato}[\textbf{RFF-}]{\subsubsecindent}
-
-\item{SiGeM permette all'utente di caricare le configurazioni dei processi generate da SGPEMv2, semplificando la preparazione di simulazioni complesse.}
-\item{SiGeM permette all'utente di scegliere la \blue{politica di schedulazione} dei processi in modo da determinare automaticamente come questi si avvicendano in esecuzione.}
+\item{AJAXDRAW permette di caricare immagini in formato SVG che utilizzano il sottoinsieme che AJAXDRAW \'e in grado di generare.}
 \end{elenconumerato}
 
 %Requisiti di Qualità
 \subsezione{Requisiti di qualit\`a (RQ)}	
 \subsubsezione{Obbligatori (RQO)}
 \begin{elenconumerato}[\textbf{RQO-}]{\subsubsecindent}
+\item Il lato client dell'applicativo dev'essere realizzato usando tecnologie web standard\footnote{con il termine ``standard'' si intendono tecnologie o effettivamente standardizzate come l'\underline{ECMAScript} o tecnologie considerate standard \textitalic{de facto} come quelle raccomandata dal \textitalic{W3C}}.
 \item Il codice sorgente rispetta lo standard di codifica interno all'azienda.
 \item Il codice sorgente \`e scritto in accordo con i paradigmi dell'orientamento agli oggetti.
 \item Il codice sorgente \`e corredato di documentazione completa.
 \item La progettazione sar\`a orientata alla flessibilit\`a del codice.
 \item Lo sviluppo del prodotto sar\`a accompagnato da fasi di test opportunamente documentate.
 \item Il prodotto non necessita di nessuna installazione, basandosi su una pagina web HTML.
+\item Il server dev'essere in grado di gestire pi\`u utenti in parallelo in modo indipendente.
 \item L'eventuale richiesta di uscita dal programma da parte dell'utente deve avere sempre la precedenza sulle altre attivit\`a che il programma deve compiere.
+\item L'utente non deve notare rallentamenti durante l'utilizzo dell'applicazione che non siano direttamente imputabili alla lentezza della connessione.
 \end{elenconumerato}
 
 %requisiti di qualita' desiderabili
 \subsubsezione{Desiderabili (RQD)}
 \begin{elenconumerato}[\textbf{RQD-}]{\subsubsecindent}
-\item Nel caso l'utente decida di continuare la sessione di lavoro, il sistema ritorner\`a allo stato in cui era al momento della richiesta di chiusura.
-
 \end{elenconumerato}
-
-
 
 %inizio requisiti di interfacciamento
 \subsezione{Requisiti di interfacciamento (RI)}
@@ -402,7 +399,7 @@ per ogni tipologia \`e presente un'ulteriore classificazione per classe di spazi
 \begin{elenconumerato}[\textbf{RIO-}]{\subsubsecindent}
 \item L'utilizzo del prodotto risulta semplice ed intuitivo grazie ad un'interfaccia grafica basata sull'uso di una toolbar.
 \item La guida in linea \`e completa e di facile utilizzo per permettere all'utente di apprendere velocemente le funzionalit\`a del prodotto.
-\item La guida in linea \`e richiamabile in qualsiasi momento, in modo sensibile al contesto.
+\item La guida in linea \`e richiamabile in qualsiasi momento.
 \item L'uso della guida in linea non influenza il corretto funzionamento del programma. 
 \end{elenconumerato}
 
@@ -411,15 +408,15 @@ per ogni tipologia \`e presente un'ulteriore classificazione per classe di spazi
 \subsubsezione{Obbligatori (RAO)}
 \begin{elenconumerato}[\textbf{RAO-}]{\subsubsecindent}
 \item Il prodotto \`e pensato per funzionare su un internet browser.
-\item Il prodotto dovr\` a essere implementato seguendo gli standard del linguaggio di markup HTML 5.
+\item Il prodotto dovr\`a essere implementato seguendo gli standard del linguaggio di markup HTML 5.
 \item Il prodotto in particolare dovr\` a utilizzare il tag "canvas" appositamente creato per l'elaborazione del disegno vettoriale sul web.
 \item Il software di supporto per lo sviluppo del prodotto \`e di tipo Open Source e freeware.
-\item Il prodotto realizzato dovr\`a essere pubblicato sul sito "www.sourceforge.net", in conformit\` a con i relativi requisiti di natura Open Source, per favorire la continuit\` a del prodotto risultante.
+\item Il prodotto realizzato dovr\`a essere pubblicato sul sito "www.sourceforge.net", in conformit\`a con i relativi requisiti di natura Open Source, per favorire la continuit\`a del prodotto risultante.
 \item Il prodotto \`e sviluppato e testato sui principali internet browsers: Mozilla Firefox, Google Chrome, Opera ed Apple Safari.
 \end{elenconumerato}
-\subsubsezione{Facoltativi (RAF)}
-\begin{elenconumerato}[\textbf{RAF-}]{\subsubsecindent}
-\item{AJAXDRAW garantisce la compatibilit\` a con il browser Microsoft Internet Explorer, il quale non implementa a pieno HTML 5, tramite la libreria \H{}excanvas\H{} creata da Google.}
+\subsubsezione{Desiderabili (DAF)}
+\begin{elenconumerato}[\textbf{DAF-}]{\subsubsecindent}
+\item{AJAXDRAW garantisce la compatibilit\`a con il browser Microsoft Internet Explorer, il quale non implementa a pieno HTML 5, tramite la libreria \H{}excanvas\H{} creata da Google.}
 \end{elenconumerato}
 
 
