AR: aggiunto requisiti di qualita' sulla risoluzione dello schermo

--- a/doc/AnalisiRequisiti/AnalisiDeiRequisiti.tex
+++ b/doc/AnalisiRequisiti/AnalisiDeiRequisiti.tex
@@ -386,6 +386,7 @@ per ogni tipologia \`e presente un'ulteriore classificazione per classe di spazi
 \item Il server dev'essere in grado di gestire pi\`u utenti in parallelo in modo indipendente.
 \item L'eventuale richiesta di uscita dal programma da parte dell'utente deve avere sempre la precedenza sulle altre attivit\`a che il programma deve compiere.
 \item L'utente non deve notare rallentamenti durante l'utilizzo dell'applicazione che non siano direttamente imputabili alla lentezza della connessione.
+\item Il funzionamento dell'applicazione dev'essere indipendente dalla risoluzione dello schermo dell'utente.
 \end{elenconumerato}
 
 %requisiti di qualita' desiderabili
