AR: sistemata numerazione casi d'uso

--- a/doc/AnalisiRequisiti/AnalisiDeiRequisiti.tex
+++ b/doc/AnalisiRequisiti/AnalisiDeiRequisiti.tex
@@ -213,7 +213,7 @@ Il seguente grafico descrive come ci si attende l'utente avvii l'applicazione.
 
 Segue ora una descrizione testuale del caso d'uso presentato dal grafico.
 
-\subsubsezione{Caso d'uso 1: richiedi pagina web}
+\subsubsezione{UC0 Caso d'uso: richiedi pagina web}
 \paragraph{Attori coinvolti} Utente, browser, server HTTP
 \paragraph{Scopo e descrizione sintetica}
 L'utente avvia l'applicazione visualizzandone la relativa pagina web attraverso il browser, che richiede la relativa pagina al server HTTP.
@@ -227,7 +227,7 @@ L'utente avvia l'applicazione visualizzandone la relativa pagina web attraverso 
 \paragraph{Precondizioni} Il browser \'e avviato.
 \paragraph{Postcondizioni} L'applicazione \'e avviata.
 
-\subsezione{Vista UC0 - Interazione con l'applicazione}
+\subsezione{Interazione con l'applicazione}
 Il seguente grafico descrive le interazioni tra l'utente finale e l'applicazione da un punto di vista ad alto livello. Le interazioni principali verranno poi espanse.
 \begin{figure}[!ht]
 \centering
@@ -327,7 +327,7 @@ Il sistema permette all'utente di esportare in formato SVG il contenuto del canv
 \paragraph{Precondizioni} Il canvas \'e visualizzato.
 \paragraph{Postcondizioni} Il file SVG \'e disponibile all'utente e contiene quanto visualizzato nel canvas.
 
-\subsubsezione{UC8 Caso d'uso 9: carica file SVG}
+\subsubsezione{UC8 Caso d'uso: carica file SVG}
 \paragraph{Attori coinvolti} Utente
 \paragraph{Scopo e descrizione sintetica} 
 Il sistema permette all'utente di caricare file in formato SVG nel canvas.
