--- a/doc/AnalisiRequisiti/AnalisiDeiRequisiti.tex
+++ b/doc/AnalisiRequisiti/AnalisiDeiRequisiti.tex
@@ -224,6 +224,8 @@ L'utente avvia l'applicazione visualizzandone la relativa pagina web attraverso 
 \item Il server HTTP invia la pagina.
 \item Il browser visualizza la pagina.
 \end{enumerate}
+\paragraph{Flusso alternativo}
+Se viene rilevato un browser non supportato, l'utente viene avvisato. L'utente pu\`o decidere di continuare lo stesso senza nessuna garanzia di corretto funzionamento.
 \paragraph{Precondizioni} Il browser \'e avviato.
 \paragraph{Postcondizioni} L'applicazione \'e avviata.
 
@@ -271,6 +273,8 @@ La/le pagina/e web contenenti il manuale utente sono gestite dal server HTTP.
 \item Il sistema richiede la pagina web contenente il manuale utente al server HTTP.
 \item Il server HTTP ritorna la pagina richiesta
 \end{elenconumerato}
+\paragraph{Flusso alternativo}
+Se il server HTTP non \'e disponibile o vi \'e un errore di comunicazione, l'utente viene avvisato.
 \paragraph{Precondizioni} L'utente ha richiesto al sistema la visualizzazione del manuale o di parte di esso.
 \paragraph{Postcondizioni} Il sistema dispone della pagina web richiesta.
 
@@ -337,6 +341,8 @@ Il sistema permette all'utente di caricare file in formato SVG nel canvas.
 \item L'utente seleziona il file SVG.
 \item Il sistema visualizza il file SVG nel canvas. Se il file contiene elementi o attributi non supportati, essi saranno ignorati.
 \end{enumerate}
+\paragraph{Flusso alternativo}
+Se il file non pu\`o essere caricato o a causa di un errore in lettura o perch\`e non \'e un file SVG, l'utente viene avvisato dell'errore e l'applicazione ritorna allo stato precedente l'esecuzione del comando.
 \paragraph{Precondizioni} Il canvas \'e visualizzato.
 \paragraph{Postcondizioni} Il canvas contiene la visualizzazione del file SVG selezionato dall'utente ed \'e modificabile.
 
