--- a/doc/PianoDiQualifica/PianoDiQualifica.tex
+++ b/doc/PianoDiQualifica/PianoDiQualifica.tex
@@ -1,103 +1,213 @@
-\documentclass[a4paper]{article}
+	\input{../TeX/base} %BASE!!!
+
+\title{\TITOLODOC}
+\author{Piero Bizzotto}
 
 \begin{document}
 
-\title{Piano di qualifica}
+\renewcommand{\insertversion}{0.0} %INSERIRE LA VERSIONE QUI DENTRO STILE x.x.xx
+\renewcommand{\TITOLODOC}{Piano di qualifica} %INSERIRE IL TITOLO DEL DOCUMENTO DA FAR COMPARIRE A PIE PAGINA
+\renewcommand{\glosspath}{.\glossario} %INSERIRE PERCORSO RELATIVO
 
-\section{Registro delle modifiche}
-\begin{tabular}{|c|c|c|c|}
-\hline
-Versione & Data & Descrizione & Autore \\ \hline 
-0.1 & 23/11/2008 & Piano di qualifica per la progettazione & Dissegna Stefano \\ \hline
-0.0 & 22/11/2008 & Bozza iniziale & Dissegna Stefano \\ \hline 
-\end{tabular} 
+%%%%%%%%%%%%%%%%%%%%%%PARTE DA NON MODIFICARE%%%%%%%%%%%%%%%%%
+\begin{titlepage}
+\begin{center}
+	\begin{Large}	\today \end{Large}
+\end{center}
 
-\section{Introduzione}
+\vspace{20pt}
 
-\subsection{Scopo del documento}
+\begin{center}
+	\begin{Huge}
+				\textbf{\ajax}
+	\end{Huge}
+\end{center}			
+
+\begin{center}
+	\begin{large}
+				\textbf{Software per il Disegno Grafico in Tecnologie Web}
+	\end{large}
+\end{center}			
+
+\vspace{20pt}
+
+\begin{center}
+\includegraphics[width=150pt]{../logo/logo}
+\end{center}
+
+\vspace{170pt}
+\begin{center} %INSERIRE ALL'INTERNO IL TITOLO DOCUMENTO CHE COMPARIRA NELLA PAGINA INIZIALE				
+	\begin{Huge}
+				\textbf{\TITOLODOC}
+	\end{Huge}
+			\\
+\end{center}
+\vspace{210pt}
+\begin{center}
+Versione: \insertversion
+\end{center}
+\end{titlepage}
+
+\newpage
+%%%%%%%%%%%%%%%%%%%%%%FINE PARTE DA NON MODIFICARE%%%%%%%%%%%%%%%%%
+
+\begin{center} %INSERIRE ALL'INTERNO IL TITOLO DOCUMENTO CHE COMPARIRA NELLA PAGINA INIZIALE
+	\begin{Huge}	
+				\textbf{\TITOLODOC}
+			\\
+	\end{Huge}
+\end{center}
+
+%\setlength{\parindent}{18pt} %settato indentazione di default 
+\section*{\Large Sommario:} %SEZIONE SOMMARIO
+\indent \indent
+Il presente documento descrive le strategie per la gestione della qualit\`a adottate dall'azienda WebShape, e comprende un resoconto delle relative attivit\`a effettivamente svolte.
+
+\section*{\Large Stato del documento:}
+\indent \indent
+	Formale Esterno
+
+\section*{\Large Redazione:}
+	\begin{elencopuntato}[\normindent]
+		\item[-] Dissegna Stefano
+	\end{elencopuntato}
+
+\section*{\Large Approvazione:}
+	\begin{elencopuntato}[\normindent]
+		\item Approvatore N. 1
+		\item Approvatore N. 2
+		\item Approvatore N. 3
+	\end{elencopuntato}
+
+\section*{\LARGE Lista di Distribuzione:}
+
+	\begin{elenconumerato}{\normindent}
+		\item WebShape \footnote{Il termine WebShape designa una collettivit\`a di individui come da organigramma contenuto nel piano di progetto fornito in allegato al presente documento}
+		\item I committenti Vardanega Tullio e Conte Renato in rappresentanza \\  dell'azienda proponente Zucchetti SPA
+		%\item Il committente Conte Renato
+	\end{elenconumerato}
+
+\newpage
+
+
+
+\section*{\Large Registro delle Modifiche:}
+
+
+\begin{center}
+	\begin{table}[h]
+		  \begin{tabular*}
+			{1\textwidth}%
+				{@{\extracolsep{\fill}}|p{0.1\textwidth}|p{0.54\textwidth}|p{0.26\textwidth}|}
+			 \hline
+%%%%%%%%%%%%%%INTESTAZIONE COLONNE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+			\textbf{Versione}  & \textbf{Descrizione} & \textbf{Autore} \\
+%%%%%%%%%%%%%%FINE INTESTAZIONE COLONNE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+		 \hline
+%%%%%%%%%%% PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+                 0.1 & 23/11/2008 Piano di qualifica per la progettazione & Dissegna Stefano \\ \hline
+                 0.0 & 22/11/2008 Bozza iniziale & Dissegna Stefano \\ \hline 		
+		\hline %%FINE RIGA
+%%%%%%%%%%% FINE PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+		\end{tabular*}
+	\caption{didascalia tabella 	MODIFICHE} %INSERIRE DIDASCALIA - SE NECESSARIA - 
+	\label{tab:modifiche}
+	\end{table}
+\end{center}
+
+
+\newpage
+\thispagestyle{fancy}
+\tableofcontents
+\thispagestyle{fancy}
+\newpage
+
+\sezione{Introduzione}
+
+\subsezione{Scopo del documento}
 Il presente documento definisce il livello di qualit\`a atteso del prodotto e del processo di realizzazione dello stesso, indica le metodologie da adottare per assicurare la qualit\`a e riporta le attivit\`a svolte inerenti la gestione della qualit\`a.
 
-\subsection{Scopo del prodotto}
+\subsezione{Scopo del prodotto}
 Il prodotto intende permettere la realizzazione di \underline{grafica vettoriale} tramite una comoda interfaccia web.
 
-\subsection{Glossario}
+\subsezione{Glossario}
 Si veda \textit{Glossario.pdf}
 
-\subsection{Riferimenti}
+\subsezione{Riferimenti}
 
-\section{Visione generale della strategia di verifica}
+\sezione{Visione generale della strategia di verifica}
 
-\subsection{Organizzazione, pianificazione strategica e temporale, responsabilit\`a}
+\subsezione{Organizzazione, pianificazione strategica e temporale, responsabilit\`a}
 Le attivit\`a di verifica si dovranno svolgere immediatamente in seguito ad una modifica, o ad un insieme di modifiche. Qualora sia possibile svolgere l'attivit\`a in modo automatico, essa dovr\`a essere applicata in seguito ad ogni singolo cambiamento. I test automatici saranno predisposti dai verificatori. Negli altri casi, onde evitare di attivare un'intero ciclo di verifica con gli annessi costi per delle modifiche di scarso rilievo, l'attivit\`a sar\`a svolta quando le differenze tra la versione attuale del prodotto e la versione su cui \'e stata applicata l'ultima verifica sono sufficientemente rilevanti. \'E compito di chi effettua le modifiche di segnalare ai verificatori la necessit\`a di un'attivit\`a di verifica. Il responsabile della qualifica dovr\`a accertarsi che il tutto si svolga correttamente e che segua quanto descritto nel presente documento.
 \paragraph{Verifica dei documenti} Il revisore, attraverso un'attenta lettura del documento, deve controllare, in ordine crescente di importanza, che:
-\begin{enumerate}
+\begin{elenconumerato}[\textbf{}]{\subsubsecindent}
 \item la grammatica e la sintassi siano corrette
 \item la formattazione del documento sia corretta e segua gli standard contenuti nelle \textit{norme di progetto}
 \item i concetti vengano espressi in modo chiaro e non ambiguo
 \item i concetti espressi siano corretti
 \item il documento sia completo
 \item il documento risolva il problema corretto
-\end{enumerate}
+\end{elenconumerato}
 \paragraph{Verifica del progetto architetturale}
 Il progetto architetturale dovr\`a essere controllato secondo le seguenti caratteristiche:
-\begin{enumerate}
+\begin{elenconumerato}[\textbf{}]{\subsubsecindent}
 \item Aderenza alle norme di progetto.
 \item Completezza: per controllare l'aderenza ai requisiti, dovr\`a essere verificata la tracciabilit\`a tra ogni requisito e la parte, o le parti, che lo soddisfano nel progetto.
 \item Sufficienza: ogni elemento del progetto dovr\`a o soddissfare un requisito o essere una dipendenza, diretta o indiretta, di un elemento necessario a soddisfare un requisito, in modo che nessuna parte del progetto risulti superflua.
 \item Estendibilit\`a e manutenabilit\`a: il progetto dovr\`a prevedere la possibilt\`a che il prodotto possa essere facilmente esteso e manutenuto in futuro.
 \item Efficienza: sebbene si ritenga che l'ottimizzazione prematura vada evitata il pi\`u possibile, considerata la necessit\`a da parte dell'applicazione di un server, la fase di progettazione dovr\`a assicurare che il server sia in grado di gestire un numero elevato di client contemporaneamente senza che l'utente noti problemi di performance.
-\end{enumerate}
+\end{elenconumerato}
 \paragraph{Verifica del progetto di dettaglio}
 Il progetto di dettaglio dovr\`a soddisfare i seguenti aspetti:
-\begin{enumerate}
+\begin{elenconumerato}[\textbf{}]{\subsubsecindent}
 \item Aderenza alle norme di progetto.
 \item Completezza: ogni elemento presente nel progetto architetturale dovr\`a essere presente anche nel progetto di dettaglio. Non dovranno inoltre essere presenti delle lacune tra un elemento del progetto e la sua effettiva realizzazione.
 \item Sufficienza: non dovranno essere presenti elementi non strettamente necessari alla realizzazione del progetto architetturale.
 \item Applicabilit\`a: il progetto dovr\`a essere realizzabile dai programmatori usando le tecnologie previste.
-\end{enumerate}
+\end{elenconumerato}
 \paragraph{Verifica del codice}
 La verifica del codice si compone dei seguenti aspetti:
-\begin{enumerate}
+\begin{elenconumerato}[\textbf{}]{\subsubsecindent}
 \item Verifica automatica: verr\'a effettuata tramite test di unit\`a predisposti dai verificatori. I test dovranno coprire tutto il codice, a eccezzione delle parti il cui funzionamento dipende da input esterni non simulabili in un test di unit\`a, come ad esempio il codice che gestisce gli eventi generati dal movimento del mouse, oppure da effetti secondari i cui risultati non siano facilmente confrontabili in modo automatico, ad esempio come appare l'aspetto grafico del programma sullo schermo dell'utente. I test dovranno accertare il corretto funzionamento delle unit\`a di codice anche con input limite.
 \item Prova del prodotto: sar\`a effettuata eseguendo l'applicazione e interagendo con essa, assicurandosi che corrisponda a quanto progettato.
 \item Confronto con altri software gi\`a esistenti: requisito fondamentale del prodotto \'e la capacit\`a di generare immagini in formato \underline{SVG}. Per assicurarsi che i file generati siano corretti, si caricheranno su software la cui correttezza \'e nota (ad esempio \textit{Inkscape}) e ci si assicurer\`a che le immagini visualizzate corrispondano con quanto disegnato dall'utente. 
 \item Lettura del codice per controllare che le norme di codifica siano rispettate
 \item Analisi del codice alla ricerca di eventuali errori. Vista la particolare dispendiosit\`a di questa modalit\`a di verifica, essa verr\'a applicata unicamente a sezioni critiche del codice.
-\end{enumerate}
+\end{elenconumerato}
 
 
-\subsection{Risorse necessarie, risorse disponibili}
+\subsezione{Risorse necessarie, risorse disponibili}
 \paragraph{Documenti} Ogni documento sar\`a verificato da un revisore. Sarebbe auspicabile che a documenti particolarmente importanti, come ad esempio la definizione di prodotto, venissero assegnati due revisori, ma i costi eccessivi associati a una tale scelta non lo permettono.
 \paragraph{Codice} Il numero di verificatori da assegnare ad un dato modulo di codice varieranno in base alle esigenze del modulo stesso.
 
-\subsection{Strumenti, tecniche, metodi}
+\subsezione{Strumenti, tecniche, metodi}
 Per il tracciamento degli errori e delle loro soluzioni ci si avvarr\`a degli strumenti di bug tracking messi a disposizione da \textit{SourceForge} e dagli strumenti di versionamento in uso.
 Le discussioni tra i verificatori e gli autori delle modifiche avverrano tramite il sistema di commenti di \textit{GitHub} qualora si tratti di annotazioni di scarsa entit\`a, mentre discussioni pi\`u rilevanti avverranno nel gruppo di discussione interno all'azienda. Entrambi i sistemi mantengono in modo persistente le informazioni, permettendo dei riferimenti futuri alle stesse. I verificatori saranno avvisati della necessit\`a di un'attivit\`a di verifica tramite un messaggio nel gruppo di discussione interno. 
 
 
-\section{Gestione amministrativa della revisione}
+\sezione{Gestione amministrativa della revisione}
 
-\subsection{Comunicazione e risoluzione di anomalie}
+\subsezione{Comunicazione e risoluzione di anomalie}
 Quando un'anomalia viene riscontrata durante una verifica, il verificatore provveder\`a ad aggiungere un ticket al sistema di bug tracking e a segnalarlo, usando i metodi sopra esposti, a chi dovr\`a correggere il problema. La segnalazione dell'errore dovr\`a contenere una descrizione chiara del problema riscontrato. Qualora il correttore trovasse poco chiara o ambigua la descrizione, o fosse in disaccordo con la stessa, aprir\`a una discussione con il verificatore nel gruppo di discussione interno. A correzione avvenuta, questo sar\`a segnalato al verificatore tramite il gruppo di discussione. Il verificatore applicher\`a nuovamente il procedimento di verifica alla correzione. Se quest'ultimo passo va a buon fine, il correttore porr\`a come risolto il ticket nel sistema di bug tracking.
 
-\subsection{Trattamento delle discrepanze}
+\subsezione{Trattamento delle discrepanze}
 Qualora un prodotto si discostasse da quanto descritto nell'analisi dei requisiti, il responsabile della qualit\`a provveder\`a a individuare la causa e il colpevole. Il responsabile della qualit\`a, dopo averne discusso con il colpevole, traccier\`a delle azioni correttive e si assicurer\`a che vengano attuate.
 
-\subsection{Procedure di controllo di qualit\`a di processo}
+\subsezione{Procedure di controllo di qualit\`a di processo}
 L'amministratore del progetto deve assicurarsi che gli standard descritti nelle \textit{norme di progetto} siano rispettati, e deve segnalare eventuali infrazioni al responsabile, in modo che provveda a risolverle. Il responsabile della qualit\`a controlla che le attivit\`a di verifica vengano svolte e che seguano le procedure descritte in questo documento.
 
 
-\section{Resoconto delle attivit\`a di verifica}
+\sezione{Resoconto delle attivit\`a di verifica}
 
-\subsection{Tracciamento componenti - requisiti}
-\subsection{Dettaglio delle verifiche tramite analisi}
-\subsection{Dettaglio delle verifiche tramite prove (test)}
-\subsection{Dettaglio dell'esito delle revisioni}
+\subsezione{Tracciamento componenti - requisiti}
+\subsezione{Dettaglio delle verifiche tramite analisi}
+\subsezione{Dettaglio delle verifiche tramite prove (test)}
+\subsezione{Dettaglio dell'esito delle revisioni}
 
 
-\section{Pianificazione ed esecuzione del collaudo}
+\sezione{Pianificazione ed esecuzione del collaudo}
 
-\subsection{Specifica della campagna di validazione (collaudo incluso)}
-\subsection{Dettaglio dell'esito della campagna di validazione}
+\subsezione{Specifica della campagna di validazione (collaudo incluso)}
+\subsezione{Dettaglio dell'esito della campagna di validazione}
 
 \end{document}
