RI: modifiche minime

--- a/doc/RelazioneIncontro/RelazioneIncontro.tex
+++ b/doc/RelazioneIncontro/RelazioneIncontro.tex
@@ -146,7 +146,7 @@ Questa \`e la relazione dell'incontro svoltosi il 25$\slash$11$\slash$2008 tra a
 
 	\subsezione{Prestazioni}
 	{
-	Le prestazioni non sono un'aspetto rilevante nella creazione di AJAXDRAW, data soprattutto la sua natura di progetto "Proof of Concept", ma il problema non dovrebbe comunque presentarsi, date le buone prestazioni dell'elemento CANVAS in s\` e, che a detta dei rappresentanti della Zucchetti \` e pi\` u veloce delle implementazioni software.
+	Le prestazioni non sono un'aspetto rilevante nella creazione di AJAXDRAW, data soprattutto la sua natura di progetto "Proof of Concept", ma il problema non dovrebbe comunque presentarsi, date le buone prestazioni dell'elemento CANVAS in s\` e, che a detta dei rappresentanti della Zucchetti \` e pi\` u veloce di Inkscape.
 	}
 
 	\subsezione{Programmazione lato server}
