AR: aggiunti alcuni use cases e prima prova uso immagine diagramma

--- a/doc/AnalisiRequisiti/AnalisiDeiRequisiti.tex
+++ b/doc/AnalisiRequisiti/AnalisiDeiRequisiti.tex
@@ -420,6 +420,41 @@ Il sistema permette all'utente di disegnare una casella di testo.
 \paragraph{Precondizioni} Il canvas \'e visualizzato.
 \paragraph{Postcondizioni} Il canvas mostra la nuova casella di testo disegnata.
 
+\subsubsezione{UC9.5 Caso d'uso: seleziona colore bordo/linea}
+\paragraph{Attori coinvolti} Utente.
+\paragraph{Scopo e descrizione sintetica} 
+Il sistema permette all'utente di selezionare il colore del bordo del poligono da disegnare, della linea oppure del testo da scrivere.
+\paragraph{Flusso di eventi}
+\begin{elenconumerato}[\textbf{}]{\subsubsecindent}
+\item L'utente seleziona il colore dalla paletta.
+\item Il sistema imposta il colore dato dall'utente come base per la figura da disegnare.
+\end{elenconumerato}
+\paragraph{Precondizioni} Il canvas \'e visualizzato.
+\paragraph{Postcondizioni} Il canvas \'e visualizzato.
+
+\subsubsezione{UC9.6 Caso d'uso: seleziona colore riempimento}
+\paragraph{Attori coinvolti} Utente.
+\paragraph{Scopo e descrizione sintetica} 
+Il sistema permette all'utente di selezionare il colore di riempimento del poligono da disegnare.
+\paragraph{Flusso di eventi}
+\begin{elenconumerato}[\textbf{}]{\subsubsecindent}
+\item L'utente seleziona il colore di riempimento del poligono dalla paletta.
+\item Il sistema imposta il colore dato dall'utente come base per la figura da disegnare.
+\end{elenconumerato}
+\paragraph{Precondizioni} Il canvas \'e visualizzato.
+\paragraph{Postcondizioni} Il canvas \'e visualizzato.
+
+\subsubsezione{UC9.7 Caso d'uso: selezione font e dimensione carattere}
+\paragraph{Attori coinvolti} Utente.
+\paragraph{Scopo e descrizione sintetica} 
+Il sistema permette all'utente di selezionare il tipo e la dimensione del carattere da disegnare.
+\paragraph{Flusso di eventi}
+\begin{elenconumerato}[\textbf{}]{\subsubsecindent}
+\item L'utente seleziona il il tipo di carattere e la sua dimensione.
+\item Il sistema imposta i valori dati dall'utente come base per la figura da disegnare.
+\end{elenconumerato}
+\paragraph{Precondizioni} Il canvas \'e visualizzato.
+\paragraph{Postcondizioni} Il canvas \'e visualizzato.
 
 %inizio requisiti
 \sezione{Lista dei requisiti}
